--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "MyFifthProject",
-    "slug": "MyFifthProject",
+    "name": "MySixthProject",
+    "slug": "MySixthProject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
